--- a/style.css
+++ b/style.css
@@ -43,6 +43,16 @@ section h2 {
   margin-bottom: 1.5em;
   padding: 1.2em 1em 1em 1em;
 }
+.profile-pic {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #2978b5;
+  box-shadow: 0 4px 18px rgba(41,120,181,0.18), 0 1px 4px #dde6ef;
+  background: #fff;
+  margin-bottom: 1em;
+}
 .card img {
   width: 100%;
   max-width: 360px;
